# right-line

./: .cursorrules  .env.example  .gitignore  .markdownlint.json  .pre-commit-config.yaml  .pydocstyle  .secrets.baseline  AGENTIC_ENHANCEMENT_SUMMARY.md  ARCH-001_IMPLEMENTATION_COMPLETE.md  ARCH-011-012_COMPLETE.md  ARCH-015_COMPLETE.md  ARCHITECTURE.md  CACHING_DEPLOYMENT_SUCCESS.md  CACHING_IMPLEMENTATION_REVIEW.md  CACHING_INTEGRATED_COMPLETE.md  CODE_OF_CONDUCT.md  COMPLETE_ENHANCEMENT_SUMMARY.md  CONTRIBUTING.md  GWETA_TRANSFORMATION_ROADMAP.md  INTEGRATION_TESTING_COMPLETE.md  MEMORY_ENHANCEMENT_ADDED.md  MIGRATION_NOTES.md  MVP_TASK_LIST.md  Makefile  PHASE_1_COMPLETE.md  PHASE_2B_MEMORY_COMPLETE.md  PHASE_2_COMPLETE.md  PHASE_3_REASONING_COMPLETE.md  PRODUCTION_READINESS_SUMMARY.md  PROMPTING_UPGRADE_SUMMARY.md  README.md  REDIS_CLOUD_SETUP.md  ROADMAP.md  TESTING_STRATEGY.md  TODAY_ACCOMPLISHMENTS.md  chain.py  debug_simple.html  docker-compose.mvp.yml  docker-compose.override.yml  docker-compose.yml  (+14 more)
.github/: dependabot.yml.disabled
.github/codeql/: codeql-config.yml
.github/environments/: README.md
.github/workflows/: README.md  ci.yml.disabled  deploy-production.yml.disabled  deploy-staging.yml.disabled  release.yml.disabled  security.yml.disabled
api/: __init__.py  analytics.py  auth.py  bm25_provider.py  composer.py  main.py  models.py  parent_doc_mapping.py  responses.py  retrieval.py  whatsapp.py
api/agents/: query_orchestrator.py
api/composer/: ab_testing.py  prompts.py  prompts_enhanced.py  quality_gates.py  synthesis.py
api/evaluation/: golden_set.py
api/llm/: __init__.py  gpt5_wrapper.py
api/middleware/: __init__.py  rate_limiter.py
api/observability/: tracing.py
api/orchestrators/: query_orchestrator.py
api/routers/: analytics.py  debug.py  documents.py  query.py  users.py  waitlist.py  whatsapp.py
api/schemas/: agent_state.py
api/tools/: reranker.py  retrieval_engine.py
config/: .cursorrules  .dockerignore  README.md
configs/: development.env  production.env  production.env.example
deploy/: Dockerfile  README.md  docker-compose.dev.yml  docker-compose.production.yml  docker-compose.staging.yml
docs/: DEPLOYMENT.md  FRONTEND_INTEGRATION_GUIDE.md  PRODUCTION_READINESS_AUDIT.md  QUICKSTART.md  README.md  UI_IMPROVEMENTS.md  UI_TASK_LIST.md  WAITLIST_FRONTEND_INTEGRATION.md  WHATSAPP_TESTING.md  configuration.md
docs/api/: README.md
docs/architecture/: MEMORY_ARCHITECTURE.md
docs/data/: SOURCES.md  sources.yaml.example
docs/deployment/: README.md
docs/development/: ci-management.md
docs/docker/: README.md
docs/project/: AGENTIC_ARCHITECTURE_ENHANCEMENT.md  AGENTIC_CORE.md  AGENTIC_TASKS.md  ARCHITECTURE.md  CODE_REVIEW.md  CONTRIBUTING.md  CONTRIBUTORS.md  DATA_PIPELINE_DECISIONS.md  DATA_PIPELINE_EXECUTION_PLAN.md  DATA_PIPELINE_REVAMP_PLAN.md  DEPLOYMENT.md  INGESTION_AND_CHUNKING.md  INGESTION_AND_CHUNKING_TASKLIST.md  MIGRATION_TO_V3.md  MULTI_AGENT_ARCHITECTURE.md  MVP_ARCHITECTURE.md  MVP_PHASE2_TASKLIST.md  MVP_TASK_LIST.md  MVP_UI.md  MVP_UI_IMPROVEMENTS.md  MVP_UI_TASK_LIST.md  PROMPTING_ENHANCEMENT_GUIDE.md  PROMPTING_IMPLEMENTATION_CHECKLIST.md  PROMPTS.md  README.md  REFORM_REFACTOR_FRAMEWORK_OPTIONS.md  REMAINING_TO_MVP.md  RETRIEVAL.md  RETRIEVAL_TASKLIST.md  SPECULATIVE_EXECUTION_PLAN.md  V2_ARCHITECTURE.md  WAITLIST_TASKLIST.md
infra/: DEPRECATED.md
libs/: README.md  __init__.py
libs/caching/: __init__.py  redis_client.py  semantic_cache.py
libs/common/: settings.py
libs/firebase/: auth_service.py  client.py
libs/firestore/: feedback.py  session.py  users.py  waitlist.py
libs/memory/: __init__.py  compression.py  coordinator.py  long_term.py  short_term.py
libs/models/: firestore.py
public/: site.webmanifest
scripts/: CHUNKING_STRATEGY.md  ENTITY_EXTRACTION.md  PARSING_AND_NORMALIZATION.md  analyze_queries.py  build_bm25_index.py  catalog_from_raw.py  chunk_docs.py  cleanup_milvus_duplicates.py  cleanup_processed_data.py  crawl_current_legislation.py  crawl_zim_judgements.py  crawl_zimlii.py  deploy-lightsail.sh  deploy-mvp.sh  enhance_si_ordinance_metadata.py  fetch_sources.py  fix_chunk_hierarchy.py  fix_document_hierarchy.py  generate_embeddings.py  get_milvus_schema.py  health_check.sh  init-db.sql  init-milvus-v2.py  init-milvus.py  init-rag.sql  lightsail-userdata.sh  milvus_upsert.py  milvus_upsert_v2.py  parse_docs.py  parse_docs_parallel.py  parse_docs_v3.py  parse_large_pdf_fallback.py  propagate_metadata_to_chunks.py  setup-vps.sh  setup_langgraph_studio.py  smoke_test.sh  split_oversized_chunks.py  test_api_retrieval.py  test_milvus_search.py  test_retrieval_direct.py  (+4 more)
scripts/deprecated/: debug_milvus_upsert.py  enrich_chunks.py  fix_chunks_for_milvus.py  milvus_upsert.py  milvus_upsert_fixed.py  test_chunking.py
scripts/tests/: test_rag_api.py
scripts/tools/: check_chunk_progress_fast.py  delete_old_chunks.py
services/: README.md  __init__.py
services/api/: Dockerfile  __init__.py  analytics.py  main.py  models.py  responses.py  whatsapp.py
services/ingestion/: Dockerfile
services/retrieval/: Dockerfile
services/summarizer/: Dockerfile
tests/: README.md  __init__.py  conftest.py
tests/api/: test_agent_state.py  test_analytics_router.py  test_auth.py  test_bm25_hybrid_search.py  test_composer.py  test_documents_router.py  test_orchestrator_nodes.py  test_prompts_advanced.py  test_query_orchestrator.py  test_query_router.py  test_retrieval.py  test_retrieval_consolidated.py  test_retrieval_r2_integration.py  test_streaming_query.py  test_tasks_41_42_e2e.py  test_users_router.py  test_waitlist_api.py  test_whatsapp_router.py
tests/evaluation/: README.md  golden_queries.json  measure_phase2_performance.py  measure_reranking_quality.py  measure_self_correction.py
tests/integration/: test_complete_pipeline.py  test_failure_modes.py  test_real_world_flows.py  test_redis_integration.py  test_state_transitions.py
tests/libs/: test_feedback_helpers.py  test_firebase.py  test_firestore_helpers.py  test_user_helpers.py  (+2 more)
web/: index.html  site.webmanifest
(+38 files in other folders)
